# object-centric-frame-stacking

./: .gitignore  LICENSE  MANIFEST.in  README.md  debug.py  loss_curve.py  pyproject.toml  train.py  visualize_images.py
cfgs/: dis.toml  eval.toml  slot.toml  template.toml
slurm/: dis_job.slurm  finish_job.slurm  pretrain.slurm  pretrain_fast.slurm
src/slotmachine/: autoencoder.py  disentanglement.py  gnn.py  match.py  mcc.py  model.py  slotattention.py  utils.py
