[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slotmachine"
version = "0.1.0"
description = "Learning causal representations from temporal sequences of images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [

    "equinox>=0.12.01",
    "optax>=0.2.4",
    "numpy>=2.2.5",
    "tomli-w>=1.2.0",
    "tqdm>=4.67.1",
    "jaxtyping>=0.3.2",
    "jax-dataloader>=0.1.3",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.6.1",
    "distrax>=0.1.5",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
cpu = ["jax>=0.6.0"]
gpu = ["jax[cuda12]>=0.6.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]
